# actonator

./: .gitignore  LICENSE  README.md
motor_driver/can_client_lib/: .gitignore  CMakeLists.txt  README.md  createCanSotHeaders.sh  motorControllerCanProtocol.def.yaml  motorControllerCanProtocol.spec.yaml
motor_driver/can_client_lib/cmake/: raspberrypi_toolchain.cmake
motor_driver/can_client_lib/config/: plotjuggler.xml
motor_driver/can_client_lib/src/can_master_lib/: MotorDriverCanMaster.cpp  MotorDriverCanMaster.hpp  Types.h
motor_driver/can_client_lib/src/can_master_lib/protocol_generated/: MotorControllerCanProtocol.hpp  MotorControllerCanProtocol_Structs.hpp
motor_driver/can_client_lib/src/configuration_app/: main.cpp
motor_driver/can_client_lib/src/example_app/: StreamWebsocket.h  main.cpp
motor_driver/can_client_lib/src/example_app/cmd/: CmdArgs.cpp  CmdArgs.h
motor_driver/can_client_lib/tools/: setup_slcand_can.sh
motor_driver/firmware/: .gitignore  CMakeLists.txt  README.md
motor_driver/firmware/src/canSot/: CanProtocolHandler.h
motor_driver/firmware/src/canSot/protocol_generated/: MotorControllerCanProtocol.hpp  MotorControllerCanProtocol_Structs.hpp
motor_driver/firmware/src/cubeMxGenerated/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
motor_driver/firmware/src/cubeMxGenerated/Src/: main.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.c
motor_driver/firmware/src/motordriver/: Motor.hpp  MotorDriver.hpp  MotorParameterEstimation.hpp  config.h
motor_driver/firmware/src/motordriver/can/: CanCommunication.h
motor_driver/firmware/src/motordriver/control/: Controller.h  MotorFocControl.h  PDController.h  SystemStateController.h
motor_driver/firmware/src/motordriver/control/filter/: LowPassFilter.h  LowPassFilterFloat.h
motor_driver/firmware/src/motordriver/modulation/: SpaceVectorModulation.h
motor_driver/firmware/src/motordriver/sensor/: Encoder.hpp  PosSensor.h
motor_driver/firmware/src/motordriver/test/: test_filters__.hpp
motor_driver/firmware/src/motordriver/util/: FixedPoint.h  constants.h  util.h
motor_driver/firmware/src/stm32_custom/: StmUtil.h  can_stm32.h  main.cpp  print_to_usb.c  testing.h
motor_driver/hardware/: Motor_Output_Power_Stage.kicad_sch  Motor_Output_Power_Stage.sch  Motor_Output_Power_Stage.sch-bak  _autosave-motorDriver.sch  _autosave-motorDriver_power_stage.kicad_pcb  fp-info-cache  fp-lib-table  motorDriver-cache.lib  motorDriver-rescue.kicad_sym  motorDriver.kicad_pcb  motorDriver.kicad_pcb-bak  motorDriver.kicad_prl  motorDriver.kicad_pro  motorDriver.kicad_sch  motorDriver.net  motorDriver.sch-bak  motorDriver_power_stage-cache.lib  motorDriver_power_stage-rescue.lib  motorDriver_power_stage.kicad_pcb-bak  motorDriver_power_stage.sch-bak  sym-lib-table  ~motorDriver.kicad_sch.lck
motor_driver/hardware/calc_util/: pwm_timing.ods
motor_driver/hardware/libs/: motorDriver.lib
motor_driver/hardware/libs/logo.pretty/: logo.kicad_mod
motor_driver/hardware/libs/ul_INA180A2IDBVR/: INA180A2IDBVR.kicad_mod  INA180A2IDBVR.lib
motor_driver/hardware/output/v0.0.1/bom/: ibom.html
motor_driver/hardware/output/v0.0.1/gerber/: motorDriver-B_Cu.gbl  motorDriver-B_Mask.gbs  motorDriver-B_Paste.gbp  motorDriver-B_SilkS.gbo  motorDriver-Edge_Cuts.gm1  motorDriver-F_Cu.gtl  motorDriver-F_Mask.gts  motorDriver-F_Paste.gtp  motorDriver-F_SilkS.gto  motorDriver-NPTH-drl_map.gbr  motorDriver-NPTH.drl  motorDriver-PTH-drl_map.gbr  motorDriver-PTH.drl
motor_driver/hardware/parts/: Parts.ods  mosfet_driver_selection.ods  mosfet_selection.ods
motor_driver/hardware/simulation/: powerStage.asc  powerStage.net  powerStage.op.raw  powerStage.plt  powerStage.raw
motor_driver/hardware/simulation/lib/: standard.dio.lib
